# competitive-benchmarking-studies

./: LICENSE  README.md
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/: .env  .gitignore  Makefile  README.md  docker-compose.linux.yml  docker-compose.yml  engine_config.py  es_utils.py  generate_data.py  pyproject.toml  queries.yml  report.py  wait_for.py
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/aws/: cloud-init.sh.tftpl  variables.tf
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/config/: mimir.yaml  prometheus.yml
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/config/elasticsearch/: metrics-otel@custom.json
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/deploy/config/: mimir.yaml  prometheus.yml
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/deploy/config/clickhouse/: schema.sql
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/deploy/docker/: docker-compose.yml
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/deploy/terraform/aws/: .gitignore  cloud-init.sh.tftpl  main.tf  variables.tf
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/disk_usage/: cli.py  measure.py
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/load/: cli.py  collector.py  config.py  report.py  wait_for.py
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/load/templates/: otelcol.yaml.j2
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/query/: cli.py  executor.py  models.py
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/querysets/: default.yml
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/results/: elasticsearch.json  mimir.json  prometheus.json
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/scenarios/: duration_270m-query_240m-scale_100.yml
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/scripts/: install_binaries.sh
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/src/benchmark/: engine_config.py  report.py  run_engine.py  scenarios.py
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/src/benchmark/disk_usage/: cli.py  measure.py
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/src/benchmark/load/: cli.py  collector.py  config.py
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/src/benchmark/query/: cli.py  loader.py
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/src/benchmark/utils/: clickhouse.py  es.py  fs.py  prometheus.py  size.py  time.py
elasticsearch-9.4-vs-prometheus-3.12-vs-mimir-3.1-data-point-size/store/: results.py
jingra/: Dockerfile  Makefile  README.md  jingra.yaml  jingra.yaml.template  pyproject.toml
jingra/queries/elasticsearch/: ecommerce_filtered_knn.json
jingra/queries/opensearch/: ecommerce_filtered_knn.json
jingra/queries/qdrant/: ecommerce_filtered_knn.json
jingra/schemas/elasticsearch/: ecommerce_filtered_knn.json
jingra/schemas/opensearch/: ecommerce_filtered_knn.json
jingra/schemas/qdrant/: ecommerce_filtered_knn.json
jingra/src/benchmark/: main.py
jingra/src/benchmark/comparison/: compare.py
jingra/src/benchmark/config/: config_loader.py
jingra/src/benchmark/datasets/: parquet_loader.py
jingra/src/benchmark/engines/: __init__.py  base.py  elasticsearch.py  opensearch.py  qdrant.py
jingra/src/benchmark/evaluation/: __init__.py  exact_match.py  parquet_search.py  reporting.py  results_uploader.py
jingra/src/benchmark/plotting/: analysis_plot.py  overview_plot.py
(+187 files in other folders)
