[project]
name = "es-prom-mimir-benchmark"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[project.scripts]
load = "load.cli:main"
wait-for = "load.wait_for:main"
query = "query.cli:main"

[tool.setuptools.packages.find]
include = ["load*", "query*", "store*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
