[project]
name = "es-prom-mimir-benchmark"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[project.scripts]
load = "load.cli:main"
wait-for = "load.wait_for:main"
disk-usage = "disk_usage.cli:main"
query = "query.cli:main"

[tool.setuptools]
py-modules = ["engine_config", "es_utils"]

[tool.setuptools.packages.find]
include = ["load*", "query*", "store*", "disk_usage*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
