[project]
name = "es-prom-mimir-benchmark"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "tabulate>=0.9",
]

[project.scripts]
load = "benchmark.load.cli:main"
wait-for = "benchmark.load.wait_for:main"
disk-usage = "benchmark.disk_usage.cli:main"
query = "benchmark.query.cli:main"
report = "benchmark.report:main"
run-engine = "benchmark.run_engine:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
